# libdeque

./: .gitignore  .gitmodules  COPYING  ChangeLog  Makefile  Makefile.am  NEWS  README  TODO  configure.ac  configure.scan  deque-structs.h  deque.c  deque.h  test-deque-2.c  test-deque.c
deque_test_arduino/: context-alloc.h  deque.h  deque_test_arduino.ino  test-deque-new.cpp  test-deque.h  test-iteration.cpp  test-out-of-memory.cpp  test-push-pop.cpp
deque_tests_arduino/: context-alloc.cpp  deque.cpp  deque_tests_arduino.ino  oom-injecting-malloc.cpp  oom-injecting-malloc.h  test-custom-allocator.cpp  test-no-allocator.cpp  test-peek.cpp
misc/: pre-tidy.patch
src/: deque.c  deque.h
tests/: test-custom-allocator.c  test-deque-new.c  test-deque.c  test-deque.h  test-iteration.c  test-no-allocator.c  test-out-of-memory.c  test-peek.c  test-push-pop-grow.c  test-push-pop.c
